spacing corrected everywhere including buttons

--- a/css/style.css
+++ b/css/style.css
@@ -15,35 +15,37 @@ button {
 /*** NAVBAR ***/
 
 nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     background-color: black;
+}
+
+.nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     height: 80px;
-    
+
+}
+
+nav li {
+    border-right: 1px solid #4d4d4d;
 }
 
 nav ul {
     display: flex;
-}
-
-
-label.logo {
-
-    line-height: 35px;
-    padding: 100px;
-    margin-right: 420px;
-    font-size: 30px;
+    margin-bottom: 0;
 
 }
+
 
 
 nav ul li {
+
     display: inline-block;
     line-height: 80px;
     margin: 0 5px;
+
 
 }
 
@@ -52,7 +54,7 @@ nav ul li a {
     font-size: 14px;
     padding: 7px 13px;
     text-transform: uppercase;
-    
+
 }
 
 .active,
@@ -71,6 +73,7 @@ a:hover {
     float: right;
     line-height: 80px;
     margin-right: 40px;
+    display: none;
 }
 
 #check {
@@ -137,23 +140,40 @@ a:hover {
 
 }
 
+/** BG + PHONE + TEXT**/
 .phone {
     background-image: url(../images/bluebg.png);
+    height: 469px;
 }
 
 
-.img {
-
-    margin-left: 90%;
-    margin-top: 9%;
+.phone-img {
+    padding: 36px 0 0 0;
 }
 
-.header {
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-    color: #676f75;
+.phone-text h1 {
+    color: white;
     font-size: 48px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+
 }
+
+.phone-text p {
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    color: #161b1d;
+    align-items: center;
+}
+
+.btn {
+    padding: 15px 48px 15px 48px;
+    color: white;
+    background-color: black;
+    text-decoration: none;
+}
+
+
 
 .column {
     float: left;
@@ -169,7 +189,20 @@ a:hover {
 }
 
 
-/*** Button Services ***/
+/*** Services ***/
+
+.services {
+    padding: 60px 0 33px;
+}
+
+.services-title {
+    margin: 0 0 55px;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    color: #676f75;
+    font-size: 48px;
+    text-transform: uppercase;
+}
 
 .button {
     background-color: #4ec1e0;
@@ -183,6 +216,8 @@ a:hover {
     font-family: 'Open Sans', sans-serif;
 }
 
+/** Text on blue background **/
+/**
 .container1 {
     position: relative;
     width: 100%;
@@ -193,12 +228,23 @@ a:hover {
     position: absolute;
     top: 65%;
     left: 210%;
-    width: 150px;
-
-    background-color: black;
+   
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 17px 47px 14px 47px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.container1 .btn btn-dark{
+    position: absolute;
+    top: 65%;
+    left: 210%;
+   
+    padding: 17px 47px 14px 47px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -210,28 +256,7 @@ a:hover {
     background-color: black;
 }
 
-
-.headtextonimg {
-    position: absolute;
-    top: 60px;
-    left: 800px;
-    font-size: 48px;
-    font-family: 'Open Sans', sans-serif;
-    color: #ffffff;
-    width: 395px;
-}
-
-
-.textonimg {
-    position: absolute;
-    top: 200px;
-    left: 800px;
-    font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
-    color: #161b1d;
-    width: 400px;
-
-}
+**/
 
 /** SERVICES **/
 
@@ -253,7 +278,7 @@ a:hover {
     color: #16deec;
     text-align: center;
     color: #4cc0e0;
-    border: 5px solid #4cc0e0;
+    border: 11px solid #4cc0e0;
     border-radius: 50%;
     width: 120px;
     height: 120px;
@@ -266,6 +291,7 @@ a:hover {
 
 footer {
     background-image: url(../images/footerbg.png);
+    padding: 58px 0 30px 0;
 }
 
 .contact {
@@ -276,7 +302,8 @@ footer {
     font-size: 30px;
     font-family: 'Open Sans', sans-serif;
     color: #4ec1e0;
-    text-align: center
+
+    padding: 0 668px 42px 649px;
 }
 
 .contacttext {
@@ -284,7 +311,8 @@ footer {
     font-family: 'Open Sans', sans-serif;
     color: #ffffff;
     text-align: center;
-    padding: auto;
+    padding: 0px 410px 0px 410px;
+
 }
 
 textarea {
@@ -295,7 +323,7 @@ label1 {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
-    padding-left: 70%;
+    padding: 0px 0px 0px 300px;
     display: inline-block;
 
 }
@@ -312,8 +340,13 @@ label1 {
     margin-top: 6px;
 }
 
+.form-control {
+    width: 70%;
+    margin-left: 15%;
+}
+
 .c-btn {
-    background-color: #23ac11;
+    background-color: #7fb618;
     color: white;
     padding: 12px 35px;
     cursor: pointer;
@@ -332,7 +365,7 @@ label1 {
 /** MOBILE (RESPONSIVE) **/
 
 @media only screen and (max-width: 899px) {
-    .headtextonimg {
+    .head-text-on-img {
         position: static;
         top: 60px;
         left: 800px;
@@ -343,7 +376,7 @@ label1 {
     }
 
 
-    .textonimg {
+    .text-on-img {
         position: static;
         top: 200px;
         left: 100px;
@@ -376,8 +409,17 @@ label1 {
         color: white;
         font-family: 'Open Sans', sans-serif;
         font-size: 14px;
-        margin-left: -25px;
+        padding: 0px 0px 0px 50px;
         display: inline-block;
+    }
+
+    .contacttext {
+        font-size: 16px;
+        font-family: 'Open Sans', sans-serif;
+        color: #ffffff;
+        text-align: center;
+        padding: 0px 0px 0px 0px;
+
     }
 
 }
